# swagger/v1/swagger.yaml
@@ -121,29 +121,42 @@ paths:
                 type: object
                 properties:
                   data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        user_id:
+                          type: integer
+                        actor_id:
+                          type: integer
+                        actor_username:
+                          type: string
+                        actor_avatar_url:
+                          type: string
+                          nullable: true
+                        status:
+                          type: integer
+                        notifiable_type:
+                          type: integer
+                        content:
+                          type: object
+                        updated_at:
+                          type: string
+                          format: date_time
+                        created_at:
+                          type: string
+                          format: date_time
+                  meta:
                     type: object
                     properties:
-                      user_id:
+                      current_page:
                         type: integer
-                      actor_id:
+                      total_pages:
                         type: integer
-                      actor_username:
-                        type: string
-                      actor_avatar_url:
-                        type: string
-                        nullable: true
-                      status:
+                      total_count:
                         type: integer
-                      notifiable_type:
+                      per_page:
                         type: integer
-                      content:
-                        type: object
-                      updated_at:
-                        type: string
-                        format: date_time
-                      created_at:
-                        type: string
-                        format: date_time
   "/api/v1/notifications/read/{id}":
     patch:
       summary: Read a notification
@@ -471,6 +484,220 @@ paths:
       responses:
         '200':
           description: profile images retrieved
+  "/api/v1/user_relations/pending/{relation_type}":
+    get:
+      summary: get user relations pending requests
+      tags:
+      - User Relations
+      security:
+      - Bearer: []
+      parameters:
+      - name: relation_type
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: User relations found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        requester_id:
+                          type: integer
+                        receiver_id:
+                          type: integer
+                        relation_type:
+                          type: string
+                        status:
+                          type: string
+                        requester_avatar_url:
+                          type: string
+                          nullable: true
+                        requester_name:
+                          type: string
+                        requester_surname:
+                          type: string
+                        requester_username:
+                          type: string
+  "/api/v1/user_relations/{relation_type}":
+    get:
+      summary: get user relations
+      tags:
+      - User Relations
+      security:
+      - Bearer: []
+      parameters:
+      - name: relation_type
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: User relations found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        requester_id:
+                          type: integer
+                        receiver_id:
+                          type: integer
+                        relation_type:
+                          type: string
+                        status:
+                          type: string
+                        requester_avatar_url:
+                          type: string
+                          nullable: true
+                        requester_name:
+                          type: string
+                        requester_surname:
+                          type: string
+                        requester_username:
+                          type: string
+  "/api/v1/user_relations/friend/{receiver_id}":
+    post:
+      summary: request friend
+      tags:
+      - User Relations
+      security:
+      - Bearer: []
+      parameters:
+      - name: receiver_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: User relations found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        requester_id:
+                          type: integer
+                        receiver_id:
+                          type: integer
+                        relation_type:
+                          type: string
+                        status:
+                          type: string
+                        requester_avatar_url:
+                          type: string
+                          nullable: true
+                        requester_name:
+                          type: string
+                        requester_surname:
+                          type: string
+                        requester_username:
+                          type: string
+  "/api/v1/user_relations/follow/{receiver_id}":
+    post:
+      summary: request follow
+      tags:
+      - User Relations
+      security:
+      - Bearer: []
+      parameters:
+      - name: receiver_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: User relations found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        requester_id:
+                          type: integer
+                        receiver_id:
+                          type: integer
+                        relation_type:
+                          type: string
+                        status:
+                          type: string
+                        requester_avatar_url:
+                          type: string
+                          nullable: true
+                        requester_name:
+                          type: string
+                        requester_surname:
+                          type: string
+                        requester_username:
+                          type: string
+  "/api/v1/user_relations/accept/{relation_type}/{requester_id}":
+    patch:
+      summary: accept request
+      tags:
+      - User Relations
+      security:
+      - Bearer: []
+      parameters:
+      - name: relation_type
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: requester_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: User relations found
+  "/api/v1/user_relations/decline/{relation_type}/{requester_id}":
+    patch:
+      summary: decline request
+      tags:
+      - User Relations
+      security:
+      - Bearer: []
+      parameters:
+      - name: relation_type
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: requester_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: User relations found
 servers:
 - url: http://localhost:3000
 components:
